[package]
name = "sensor_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-modbus = "0.6"
tokio-serial = "5.4.4"
tokio-stream = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

influxdb2 = "0.5"
